@@ -231,7 +231,7 @@ if ( ! class_exists( 'Unit_Module' ) ) {
 		function update_module_response( $data ) {
 			global $user_id, $wpdb, $coursepress;
 
-			$user_id = get_current_user_id();
+			$user_id   = get_current_user_id();
 			$unit_id   = get_post_ancestors( $data->response_id );
 			$course_id = get_post_meta( $unit_id[0], 'course_id', true );
 
@@ -249,7 +249,7 @@ if ( ! class_exists( 'Unit_Module' ) ) {
 				$post['ID'] = $data->ID; //If ID is set, wp_insert_post will do the UPDATE instead of insert
 			}
 
-			 //LEGACY: Check if response already exists ( from the user. Only one response is allowed per persponse request / module per user )
+			//LEGACY: Check if response already exists ( from the user. Only one response is allowed per persponse request / module per user )
 			$already_respond_posts_args = array(
 				'posts_per_page' => 1,
 				'meta_key'       => 'user_ID',
@@ -569,6 +569,7 @@ if ( ! class_exists( 'Unit_Module' ) ) {
 								?><p class="form-info-regular"><?php echo $form_message; ?></p>
 							<?php } ?>
 
+
 							<input type="submit" class="apply-button-enrolled submit-elements-data-button" name="submit_modules_data_<?php echo( $is_last_page ? 'done' : 'save' ); ?>" value="<?php echo( $is_last_page ? __( 'Done', 'cp' ) : __( 'Next', 'cp' ) ); ?>">
 						<?php
 						} else {
@@ -776,7 +777,7 @@ if ( ! class_exists( 'Unit_Module' ) ) {
 
 					// Only show count for courses an Instructor can actually assess
 					$course_id = get_post_meta( $ungraded_response->ID, 'course_id', true );
-					if( ! CoursePress_Capabilities::is_course_instructor( $course_id ) ) {
+					if ( ! CoursePress_Capabilities::is_course_instructor( $course_id ) ) {
 						continue;
 					}
 
@@ -835,7 +836,7 @@ if ( ! class_exists( 'Unit_Module' ) ) {
 					)
 				);
 
-				if( ! CoursePress_Capabilities::is_course_instructor( $course_id ) ) {
+				if ( ! CoursePress_Capabilities::is_course_instructor( $course_id ) ) {
 					return 0;
 				}
 
@@ -980,6 +981,23 @@ if ( ! class_exists( 'Unit_Module' ) ) {
 				'file_input_module',
 				'text_input_module',
 			);
+
+			$preview_data = CoursePress::instance()->preview_data;
+			if ( isset( $preview_data ) && ! empty( $preview_data ) ) {
+				$content = '
+					<div class="module_grade">
+						<div class="module_grade_left">
+						' . esc_html__( 'Preview only', 'cp' ) . '
+						</div>
+						<div class="module_grade_right">
+						</div>
+					</div>
+				';
+
+				echo $content;
+
+				return;
+			}
 
 			$limit_attempts       = $data->limit_attempts; //yes or no
 			$limit_attempts_value = $data->limit_attempts_value;
